tests/errors/preprocessor/logical_operations_are_prohibited_in_eval.c
#eval (1 == 0 ? 2 : 1)

void main()
{

}
